Refactor, improvements, bugfixes. (#8)
Java 17. Refactor, improvements, bugfixes.